err/django-mockups.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/django_mockups-0.4.8.egg-info'...
Listing './lib/python3.5/site-packages/mockups'...
Compiling './lib/python3.5/site-packages/mockups/base.py'...
***   File "./lib/python3.5/site-packages/mockups/base.py", line 279
    except constraints.InvalidConstraint, e:
                                        ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/mockups/contrib'...
Listing './lib/python3.5/site-packages/mockups/management'...
Listing './lib/python3.5/site-packages/mockups/management/commands'...
Compiling './lib/python3.5/site-packages/mockups/management/commands/mockups.py'...
***   File "./lib/python3.5/site-packages/mockups/management/commands/mockups.py", line 89
    print '%s(pk=%s): %s' % (
                        ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/mockups/tests'...
Listing './lib/python3.5/site-packages/mockups/tests/generator_test'...
Listing './lib/python3.5/site-packages/mockups/tests/media'...
Listing './lib/python3.5/site-packages/mockups/tests/media/emptyfiles'...
Listing './lib/python3.5/site-packages/mockups/tests/media/textfiles'...
Listing './lib/python3.5/site-packages/mockups/tests/mockups_test'...
Listing './lib/python3.5/site-packages/mockups/tests/sample_app'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
